# saludpr

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-CONTENT  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2026_04_21_1000_initial.py  2026_04_22_0900_barrios.py  2026_04_22_1600_territory.py  2026_04_22_1800_designations.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  barrio.py  barrio_health_metric.py  data_source.py  etl_run.py  health_metric.py  hospital.py  muni_designation.py  municipality.py  territory_health_metric.py  vulnerability.py
backend/app/routers/: barrios.py  data_sources.py  designations.py  health.py  metrics.py  municipalities.py  territory.py
data/: README.md  etl_log.json
docs/: architecture.md  data-sources.md  roadmap.md
docs/sql/: schema.md
etl/: README.md  pyproject.toml  requirements.txt
etl/lib/: acs_common.py  db.py  logging.py  settings.py  tracker.py
etl/scripts/: __init__.py  run_all_etl.py  seed_data_sources.py
etl/sources/: __init__.py  cdc_brfss_territory.py  cdc_places_county.py  census_acs.py  census_acs_barrios.py  census_tiger_barrios.py  census_tiger_municipalities.py  hrsa_mua.py
frontend/: .env.example  README.md  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/app/acerca/: page.tsx
frontend/app/metodologia/: page.tsx
frontend/app/municipio/[slug]/: page.tsx
frontend/components/: barrio-drilldown-header.tsx  designation-stat-card.tsx  indicator-picker.tsx  muni-hero.tsx  muni-sdoh-grid.tsx  muni-search.tsx  muni-secondary-panels.tsx  pr-map.tsx  site-footer.tsx  site-header.tsx  stats-bar.tsx  territory-context-panel.tsx
frontend/lib/: indicators.ts  muni-slugs.ts
infra/: README.md
infra/nginx/: saludpr-api.conf
infra/scripts/: deploy-backend.sh  setup-local-dev.sh  setup-nginx.sh  setup-vm.sh
infra/systemd/: saludpr-api.service
