[project]
name = "saludpr-backend"
version = "0.1.0"
description = "SaludPR FastAPI backend — public health data for Puerto Rico"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Carlos A. Perez Medina", email = "carlos.perez@dataurea.com" },
]

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy>=2.0.35",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "alembic>=1.13.0",
  "python-dotenv>=1.0.0",
  "geoalchemy2>=0.15.2",
  "shapely>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "ruff>=0.7.0",
  "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
  "E", "W", "F", "I", "B", "C4", "UP", "N", "S", "SIM", "RET", "PL", "RUF",
]
ignore = [
  "S101",
  "PLR0913",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["geoalchemy2.*", "shapely.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
