[project]
name = "saludpr-etl"
version = "0.1.0"
description = "SaludPR data pipeline — pulls public health data into PostgreSQL"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Carlos A. Perez Medina", email = "carlos.perez@dataurea.com" },
]

dependencies = [
  "pandas>=2.2.0",
  "geopandas>=1.0.0",
  "requests>=2.32.0",
  "tenacity>=9.0.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "sqlalchemy>=2.0.35",
  "psycopg[binary]>=3.2.0",
  "geoalchemy2>=0.15.2",
  "shapely>=2.0.0",
  "python-dotenv>=1.0.0",
  "tqdm>=4.66.0",
  "pyogrio>=0.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.7.0",
  "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib", "sources", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N", "SIM", "RET", "PL", "RUF"]
ignore = ["PLR0913", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
